--- a/L1.md
+++ b/L1.md
@@ -36,3 +36,4 @@
   <img src="media/Diagrama.Lab1.png" width="700"><br>
   <i>Рисунок 1 – ER-діаграма бази даних кав’ярні</i>
 </p>
+## Список сутностей та їх атрибути
