--- a/L1.md
+++ b/L1.md
@@ -33,7 +33,7 @@
 ## Діаграма ER
 матиме наступний вигляд:
 <p align="center">
-  <img src="media/Diagrama.Lab1.png" width="700"><br>
+  <img src="Diagrama.Lab1.png" width="700"><br>
   <i>Рисунок 1 – ER-діаграма бази даних кав’ярні</i>
 </p>
 ## Список сутностей та їх атрибути
