--- a/L1.md
+++ b/L1.md
@@ -37,8 +37,7 @@
   <i>Рисунок 1 – ER-діаграма бази даних RPG-гри</i>
 </p>
 ## Список сутностей та їх атрибути
-### Таблиця 1 - Account
-
+### Таблиця 1 - Clients
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
 | account_id | INT | PK | Ідентифікатор акаунта |
