Revise entity tables and attributes in L1.md
Updated entity tables with new attributes and descriptions for clarity and accuracy.

--- a/L1.md
+++ b/L1.md
@@ -38,117 +38,123 @@
 </p>
 
 ## Список сутностей та їх атрибути
-### Таблиця 1 - Clients
+### Таблиця 1 - Account
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| account_id | INT | PK | Ідентифікатор акаунта |
-| email | VARCHAR |  | Ім’я  |
-| password | VARCHAR |  | Телефон |
-| username | INT |  | Бонусні бали |
-| registration_date | INT |  | Бонусні бали |
-| online | INT |  | Бонусні бали |
-| status(banned) | INT |  | Бонусні бали |
-| timing_game | INT |  | Бонусні бали |
+| account_id | INT | PK | Унікальний індентифікатор акаунта |
+| email | VARCHAR |  | Електронна пошта  |
+| password | VARCHAR |  | Пароль акаунта |
+| username | VARCHAR |  | Ім'я користувача |
+| registration_date | VARCHAR |  | Дата реєстрації |
+| online | VARCHAR |  | Онлайн |
+| status(banned) | VARCHAR |  | Статус(заблокований) |
+| timing_game | INT |  | Час в грі |
 
 ### Таблиця 2 - Character
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| character_id | INT | PK | Ідентифікатор працівника |
-| account_id | FK |  | ПІБ |
-| server_id | FK |  | Посада |
-| region_id | FK |  | Дата прийому на роботу |
-| nickname | DATE |  | Дата прийому на роботу |
-| level | DATE |  | Дата прийому на роботу |
-| currency | DATE |  | Дата прийому на роботу |
-| health | DATE |  | Дата прийому на роботу |
-| stamina | DATE |  | Дата прийому на роботу |
-| class | DATE |  | Дата прийому на роботу |
-| position | DATE |  | Дата прийому на роботу |
+| character_id | INT | PK | Унікальний ідентифікатор персонажа |
+| account_id | INT | FK | Посилання на акаунт власника |
+| server_id | INT | FK | Посилання на сервер |
+| region_id | INT | FK | Посилання на поточний регіон |
+| nickname | INT |  | Посилання на точку відродження |
+| level | VARCHAR |  | Ігрове ім'я персонажа |
+| currency | INT |  | Поточний рівень персонажа |
+| health | INT |  | Кількість ігрової валюти |
+| stamina | INT |  | Поточний рівень витривалості |
+| class | VARCHAR |  | Ігровий клас (маг, воїн тощо) |
+| position | VARCHAR |  | Поточні координати у світі (X, Y, Z) |
 
 ### Таблиця 3 - Server
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| server_id | INT | PK | Ідентифікатор постачальника |
-| name | VARCHAR |  | Назва компанії |
-| ip_address | VARCHAR |  | Контактний телефон |
-| status | VARCHAR | | Контактна електронна пошта |
-| current_characters | VARCHAR | | Контактна електронна пошта |
-| max_characters | VARCHAR | | Контактна електронна пошта |
+| server_id | INT | PK | Унікальний ідентифікатор сервера |
+| name | VARCHAR |  | Назва сервера |
+| ip_address | VARCHAR |  | IP-адреса для підключення |
+| status | VARCHAR |  | Поточний стан (Online, Offline) |
+| current_characters | INT |  | Поточна кількість гравців онлайн |
+| max_characters | INT |  | Максимальна місткість сервера |
 
 ### Таблиця 4 - Region
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| region_id | INT | PK | Ідентифікатор замовлення |
-| server_id | INT | FK | Посилання на Clients |
-| name | INT | FK | Посилання на Employees |
-| biome | DATETIME |  | Дата створення |
-| min_level | DECIMAL |  | Загальна сума |
+| region_id | INT | PK | Унікальний ідентифікатор регіону |
+| server_id | INT | FK | Посилання на сервер |
+| name | VARCHAR |  | Назва регіону |
+| biome | VARCHAR |  | Тип біому (ліс, пустеля, гори) |
+| min_level | INT |  | Рекомендований рівень для входу |
 
 ### Таблиця 5 - Structure
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| structure_id | INT | PK | Ідентифікатор позиції меню |
-| region_id | FK |  | Назва страви |
-| character_id | FK |  | Ціна |
-| name | VARCHAR |  | Категорія |
-| position | VARCHAR |  | Категорія |
-| type | VARCHAR |  | Категорія |
-| is_buyable | VARCHAR |  | Категорія |
-| cost | VARCHAR |  | Категорія |
+| structure_id | INT | PK | Унікальний ідентифікатор споруди |
+| region_id | INT | FK | Посилання на регіон |
+| name | VARCHAR |  | Назва споруди |
+| position | VARCHAR |  | Координати розміщення |
+| type | VARCHAR |  | Тип споруди (дім, база, сейф-зона) |
+| is_buyable | BOOLEAN |  | Чи доступна для покупки |
+| cost | INT |  | Вартість споруди |
 
 ### Таблиця 6 - CharacterQuests
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| character_id | INT | FK | Ідентифікатор інгредієнта |
-| quest_id | FK |  | Назва |
-| status | VARCHAR |  | Одиниця виміру |
+| character_id | INT | PK, FK | Посилання на персонажа |
+| quest_id | INT | PK, FK | Посилання на квест |
+| status | VARCHAR | | Статус виконання (в процесі, завершено) |
 
 ### Таблиця 7 - QuestSystem
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| quest_id | INT | PK | Ідентифікатор поставки |
-| item_id | INT | FK | Посилання на Suppliers |
-| name | INT | FK | Хто прийняв поставку |
-| description | DATE |  | Дата поставки |
-| XP | DECIMAL | | Загальна вартість |
+| quest_id | INT | PK | Унікальний ідентифікатор квесту |
+| item_id | INT | FK | Посилання на предмет-нагороду |
+| name | VARCHAR | | Назва квесту |
+| description | TEXT | | Детальний опис завдання |
+| XP | INT | | Кількість досвіду за виконання |
 
 ### Таблиця 8 - InventorySlot
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| slot_id | INT | PK | Ідентифікатор запису |
-| character_id | INT | FK | Посилання на Orders |
-| item_id | INT | FK | Посилання на Menu |
-| amount | INT |  | Кількість |
-| is_equipped | INT |  | Кількість |
+| slot_id | INT | PK | Унікальний ідентифікатор слоту |
+| character_id | INT | FK | Посилання на власника інвентарю |
+| item_id | INT | FK | Посилання на предмет у слоті |
+| amount | INT | | Кількість предметів (стак) |
+| is_equipped | BOOLEAN | | Чи екіпіровано на персонажі |
 
 ### Таблиця 9 - ItemTemplate
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| item_id | INT | PK | Ідентифікатор рецепту |
-| name | INT | FK | Посилання на Menu |
-| type | INT | FK | Посилання на Ingredients |
-| description | DECIMAL |  | Кількість інгредієнта |
-| weight | DECIMAL |  | Кількість інгредієнта |
-| max_stack | DECIMAL |  | Кількість інгредієнта |
-| rarity | DECIMAL |  | Кількість інгредієнта |
-| cost | DECIMAL |  | Кількість інгредієнта |
+| item_id | INT | PK | Унікальний ідентифікатор предмета |
+| name | VARCHAR | | Назва предмета |
+| type | VARCHAR | | Тип (зброя, ресурс, зілля) |
+| description | TEXT | | Опис предмета |
+| weight | DECIMAL | | Вага одиниці предмета |
+| max_stack | INT | | Максимальна кількість у слоті |
+| rarity | VARCHAR | | Рідкість (звичайна, епічна) |
+| cost | INT | | Базова вартість |
 
 
 ### Таблиця 10 - WeaponStas
 
 | Поле | Тип | Ключ | Опис |
 |------|------|------|------|
-| item_id | INT | FK | Ідентифікатор запису |
-| attack_stats | INT | FK | Посилання на Ingredients |
-| bonuses | DECIMAL |  | Кількість на складі |
+| item_id | INT | PK, FK | Посилання на зброю з ItemTemplate |
+| attack_stats | INT | | Показник шкоди (атаки) |
+| bonuses | VARCHAR | | Додаткові бойові ефекти |
 
+### Таблиця 11 - StructureOwnership
+
+| Поле | Тип | Ключ | Опис |
+|------|------|------|------|
+| character_id | INT | PK, FK | Посилання на гравця |
+| structure_id | INT | PK, FK | Посилання на споруду |
+| role | VARCHAR | | Роль гравця (Власник, Гість тощо) |
 
 **PK** – первинний ключ, **FK** – зовнішній ключ.
