--- a/L1.md
+++ b/L1.md
@@ -33,7 +33,7 @@
 ## Діаграма ER
 матиме наступний вигляд:
 <p align="center">
-  <img src="Diagrama.Lab1.png" width="700"><br>
+  <img src="firefox_eZqocfiniI.png" width="700"><br>
   <i>Рисунок 1 – ER-діаграма бази даних RPG-гри</i>
 </p>
 
