Add relationships and assumptions for database design
Detailed relationships and assumptions for database entities in the multiplayer online RPG game, including constraints and entity attributes.

--- a/L1.md
+++ b/L1.md
@@ -158,3 +158,38 @@
 | role | VARCHAR | | Роль гравця (Власник, Гість тощо) |
 
 **PK** – первинний ключ, **FK** – зовнішній ключ.
+
+### Зв'язки та припущення з обмеженням
+
+Account - Character Один акаунт може містити на собі багато ігрових персонажів (обмеження 5 персонажів)
+
+Server - Character Один сервер може містити багато або нуль гравців (обмеження 50 гравців)
+
+Server - Region Один сервер може складатися з багатьох або хоча б з одного регіону (обмеження 4 регіони)
+
+Region - Structure Один регіон може містити в собі нуль або багато структур (Обмеження структур 100. Структура - це данжі, івенти, будівлі гравців) 
+
+Character - StructureOwnership Один персонаж може володіти або мати права доступу до багатьох різних структур на сервері (нуль або багато). Тому один гравець може мати декілька записів у таблиці StructureOwnership, де кожен запис вказує на конкретну будівлю та роль цього гравця щодо неї (наприклад: "Головний власник", "Співвласник", "Гість").
+
+Structure - StructureOwnership Одна конкретна структура (будівля) може мати кількох власників або осіб із правом доступу (нуль або багато). Тому на одну будівлю може посилатися багато записів із таблиці StructureOwnership. Обмеження/Логіка: Якщо для певної структури не існує жодного запису в цій таблиці (нуль власників), це означає, що структура є системною (належить самому серверу: наприклад, безпечна зона, данж або стартовий табір).
+
+Structure - Character На одній структурі, що може бути використана як точка відродження може спавнитися багато або нуль персонажів
+
+Character - Region На одному регіоні може бути багато або нуль гравців, але кожен гравець фізично може бути лише на одному регіоні
+
+Character - InventorySlot Кожен гравець має визначену кількість слотів у інвентарі (початкова кількість слотів 50)
+
+InventorySlot - ItemTemplate В один слот інвентарю може бути покладений лише один вид премету або він пустий, але один вид предмету може бути розміщений в декількох слотах
+
+ItemTemplate - WeaponStats Деякі предмети тобто нуль або багато можуть класифікуватися як зброя та мати додаткові параметри сили (та ці параметри сили можуть не належать деяким предметам по-типу броні та відзнак) 
+
+QuestSystem - ItemTemplate Кожен квест може містити одну фіксовану матеріальну винагороду (посилання на один конкретний вид предмета). Водночас один і той самий предмет може бути нагородою за різні квести.
+
+Character - CharacterQuests Один персонаж може мати багато або нуль квестів (CharacterQuests - це асоціативна сутність, і нам важливо щоб ігровий процес зберігався, нам потрібен статус квесту для прикладу: ще не початий / в проходженні / закінчений)
+
+CharacterQuests - QuestSystem Один і той самий шаблон квесту із довідника (QuestSystem) може бути одночасно взятий багатьма різними персонажами (або не взятий жодним). Тобто, на один квест може посилатися багато записів у журналах різних гравців (CharacterQuests). Водночас кожен конкретний запис у журналі гравця завжди посилається рівно на один конкретний квест із довідника.
+
+### Висновки: 
+Під час виконання лабораторної роботи було успішно зібрано та проаналізовано вимоги для бази даних багатокористувацької онлайн RPG-гри. На основі потреб зацікавлених сторін ми визначили 11 ключових сутностей (акаунти, персонажі, сервери, предмети, квести тощо), сформували їхні атрибути та вказали первинні й зовнішні ключі для забезпечення цілісності даних.
+
+Також було спроєктовано логічні зв'язки між сутностями з урахуванням специфічних ігрових обмежень та нормалізовано складні відношення за допомогою асоціативних таблиць. Підсумком роботи стала готова ER-діаграма, яка є надійним концептуальним фундаментом для подальшої фізичної реалізації бази даних.
